traduction des login-register-forget pwd

--- a/src/app/forgot-password/forgot-password.page.html
+++ b/src/app/forgot-password/forgot-password.page.html
@@ -5,12 +5,12 @@
                 <img src="../../assets/images/back.svg">
             </ion-back-button>
         </ion-buttons>
-        <ion-title mode="ios">Forgot Password</ion-title>
+        <ion-title mode="ios">Mot de passe oublié</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
     <div class="ion-text-center note_div">
-        Type your email ID in to the field below to receive verification code by E-mail
+        Saisissez votre adresse e-mail dans le champ ci-dessous pour recevoir le code de vérification par e-mail
     </div>
     <ion-item lines="none">
         <div slot="start">
@@ -19,14 +19,15 @@
         <ion-label>
             <div class="name">Email</div>
             <div class="">
-                <ion-input type="" placeholder="Enter Your Email"></ion-input>
+                <ion-input type="" placeholder="Votre email"></ion-input>
             </div>
         </ion-label>
     </ion-item>
-    <ion-button expand="full" (click)="verify()">Verify Account</ion-button>
+    <ion-button expand="full" (click)="verify()">Vérifier mon compte</ion-button>
 </ion-content>
 <ion-footer class="ion-no-border">
     <div class="ion-text-center">
-        <div class="message">If you haven't account <span class="clickhere" (click)="setAccount()">click here</span> to set up a new account.</div>
+        <div class="message">Si vous n'avez pas de compte <span class="clickhere" (click)="setAccount()">Cliquez
+                ici</span> pour créer un compte.</div>
     </div>
 </ion-footer>
