--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -5,16 +5,16 @@
                 <img src="../../assets/images/back.svg">
             </ion-back-button>
         </ion-buttons>
-        <ion-title mode="ios">About Us</ion-title>
+        <ion-title mode="ios">A propos de Flexx</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-text-center">
     <div>
-        <p class="ion-padding-bottom">App Version 1.0.0</p>
+        <p class="ion-padding-bottom">Flexx Version 1.0.0</p>
         <p class="ion-padding-bottom"><img src="../../assets/images/BEAUTILOCKS.svg" height="35px" width="250px"> </p>
-        <span>©Beautilocks 2019-20</span>
-        <p>All rights reserved</p>
+        <span>©Flexx 2021</span>
+        <p>Développer avec ❤️ par ANDRENA Solutions</p>
     </div>
 
 </ion-content>
