--- a/src/app/language/language.page.html
+++ b/src/app/language/language.page.html
@@ -5,19 +5,19 @@
                 <img src="../../assets/images/back.svg">
             </ion-back-button>
         </ion-buttons>
-        <ion-title mode="ios">Language</ion-title>
+        <ion-title mode="ios">Langue</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
     <ion-radio-group value="English" mode="ios">
         <ion-item lines="none">
-            <div>English<span>(Default)</span></div>
-            <ion-radio slot="end" value="English"></ion-radio>
+            <div>Français<span>(Par Défaut)</span></div>
+            <ion-radio slot="end" value="Français"></ion-radio>
         </ion-item>
         <div class="border_bottom"></div>
         <ion-item lines="none">
-            <div>عربى</div>
-            <ion-radio slot="end" value="عربى"></ion-radio>
+            <div>English</div>
+            <ion-radio slot="end" value="English"></ion-radio>
         </ion-item>
         <div class="border_bottom"></div>
         <ion-item lines="none">
