--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,6 +1,6 @@
 <ion-header class="ion-no-border">
     <ion-toolbar>
-        <ion-title mode="ios">Profile</ion-title>
+        <ion-title mode="ios">Profil</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -29,38 +29,38 @@
             </svg>
         </div>
         <p class="name">Amelia Addison</p>
-        <p class="joining">Join at October 2019</p>
+        <p class="joining">Membre depuis janvier 2021</p>
     </div>
     <ion-item lines="none" (click)="editProfile()">
-        <div>Edit Profile</div>
+        <div>Editer le profil</div>
     </ion-item>
     <div class="border_bottom"></div>
     <ion-item lines="none" (click)="shareWith()">
-        <div>Share With Friends</div>
+        <div>Partager avec des amis</div>
     </ion-item>
     <div class="border_bottom"></div>
     <ion-item lines="none" (click)="language()">
-        <div>Language</div>
+        <div>Langue</div>
     </ion-item>
     <div class="border_bottom"></div>
     <ion-item lines="none" (click)="privacy()">
-        <div>Privacy Policy</div>
+        <div>Politique de confidentialité - RGPD</div>
     </ion-item>
     <div class="border_bottom"></div>
     <ion-item lines="none" (click)="terms()">
-        <div>Terms & Conditions</div>
+        <div>Termes et conditions</div>
     </ion-item>
     <div class="border_bottom"></div>
     <ion-item lines="none" (click)="aboutUs()">
-        <div>About Us</div>
+        <div>A propos de Flexx</div>
     </ion-item>
     <div class="border_bottom"></div>
     <ion-item lines="none" (click)="logout()">
-        <div>Logout</div>
+        <div>Déconnexion</div>
     </ion-item>
     <div class="border_bottom"></div>
     <ion-item lines="none">
-        <div><span>Delete Account</span></div>
+        <div><span>Supprimer le compte</span></div>
     </ion-item>
     <div class="border_bottom"></div>
 </ion-content>
