--- a/src/app/search-layout/search-layout.page.html
+++ b/src/app/search-layout/search-layout.page.html
@@ -6,13 +6,13 @@
             </ion-back-button>
         </ion-buttons>
         <ion-title mode="ios">
-            <ion-input type="text" placeholder="Type Something..."></ion-input>
+            <ion-input type="text" placeholder="Tapez quelque chose..."></ion-input>
         </ion-title>
         <img src="../../assets/images/close.svg" slot="end" height="16px" width="16px" class="ion-margin-end">
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <div class="main_head ion-padding-start">Search Results (53)<span class="ion-float-right ion-margin-end">
+    <div class="main_head ion-padding-start">Résultats de recherche (53)<span class="ion-float-right ion-margin-end">
             <img (click)="filter()" src="../../assets/images/filter.svg" height="18px" width="18px"></span>
     </div>
     <ion-item lines="none" *ngFor="let item of searchSalon">
