--- a/src/app/set-location/set-location.page.html
+++ b/src/app/set-location/set-location.page.html
@@ -5,19 +5,19 @@
                 <img src="../../assets/images/back.svg">
             </ion-back-button>
         </ion-buttons>
-        <ion-title mode="ios">Set Location</ion-title>
+        <ion-title mode="ios">Définir l'emplacement</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
     <ion-row class="ion-padding-top">
         <ion-col size="9" class="ion-no-padding">
-            <ion-searchbar mode="ios" placeholder="Search Location"></ion-searchbar>
+            <ion-searchbar mode="ios" placeholder="Rechercher un emplacement"></ion-searchbar>
         </ion-col>
         <ion-col size="1" class="ion-no-padding ion-margin-top">
             <img src="../../assets/images/gps.svg" height="16px" width="16px">
         </ion-col>
         <ion-col size="2" class="ion-no-padding ion-margin-top">
-            <div class="detect">Detect</div>
+            <div class="detect">Détecter</div>
         </ion-col>
     </ion-row>
     <ion-item lines="none">
