--- a/src/app/sharing/sharing.page.html
+++ b/src/app/sharing/sharing.page.html
@@ -1,6 +1,6 @@
 <ion-header class="ion-no-border">
     <ion-toolbar>
-        <ion-title mode="ios">Share With Friends</ion-title>
+        <ion-title mode="ios">Partager avec des amis</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
