--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -5,7 +5,7 @@
                 <img src="../../assets/images/back.svg">
             </ion-back-button>
         </ion-buttons>
-        <ion-title mode="ios">Edit Profile</ion-title>
+        <ion-title mode="ios">Editer le profil</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -14,8 +14,8 @@
             <img class="" src="../../assets/images/user.svg" height="32px" width="32px">
         </div>
         <ion-label>
-            <div class="name">Full Name</div>
-            <ion-input type="text" value="Amelia Addison" placeholder="Enter Your Name"></ion-input>
+            <div class="name">Nom complet</div>
+            <ion-input type="text" value="Amelia Addison" placeholder="Votre nom complet"></ion-input>
         </ion-label>
     </ion-item>
     <ion-item lines="none">
@@ -24,7 +24,7 @@
         </div>
         <ion-label>
             <div class="name">Email</div>
-            <ion-input type="email" value="Ameliaaddison112@gmail.com" placeholder="Enter Your Email"></ion-input>
+            <ion-input type="email" value="Ameliaaddison112@gmail.com" placeholder="Votre Email"></ion-input>
         </ion-label>
     </ion-item>
     <ion-item lines="none">
@@ -32,14 +32,14 @@
             <img class="" src="../../assets/images/gender.svg" height="32px" width="32px">
         </div>
         <ion-label>
-            <div class="name">Select Gender</div>
+            <div class="name">Civilité</div>
             <ion-row class="ion-padding-top">
-                <ion-col size="4" class="ion-no-padding"> <label class="container">Male
-                        <input type="radio" checked="checked" name="radio">
+                <ion-col size="4" class="ion-no-padding"> <label class="container">M
+                        <input type="radio" name="radio">
                         <span class="checkmark"></span>
                     </label></ion-col>
-                <ion-col size="4" class="ion-no-padding"> <label class="container">Female
-                        <input type="radio" name="radio">
+                <ion-col size="4" class="ion-no-padding"> <label class="container">F
+                        <input type="radio" checked="checked" name="radio">
                         <span class="checkmark"></span>
                     </label></ion-col>
             </ion-row>
@@ -50,8 +50,8 @@
             <img class="" src="../../assets/images/padlock.svg" height="32px" width="32px">
         </div>
         <ion-label>
-            <div class="name">Password</div>
-            <ion-input type="password" value="********" placeholder="Enter Your Password"></ion-input>
+            <div class="name">Mot de passe</div>
+            <ion-input type="password" value="********" placeholder="Tapez votre mot de passe"></ion-input>
         </ion-label>
     </ion-item>
     <ion-item lines="none">
@@ -59,8 +59,8 @@
             <img class="" src="../../assets/images/padlock.svg" height="32px" width="32px">
         </div>
         <ion-label>
-            <div class="name">Confirm Password</div>
-            <ion-input type="password" value="********" placeholder="Re-enter Password"></ion-input>
+            <div class="name">Confirmer mot de passe</div>
+            <ion-input type="password" value="********" placeholder="Retaper le mot de passe"></ion-input>
         </ion-label>
     </ion-item>
     <ion-item lines="none">
@@ -68,11 +68,11 @@
             <img class="" src="../../assets/images/phone.svg" height="32px" width="32px">
         </div>
         <ion-label>
-            <div class="name">Contact Number</div>
-            <ion-input type="number" value="00000 00000" placeholder="Enter Your Contact Number"></ion-input>
+            <div class="name">Tel.</div>
+            <ion-input type="number" value="0694345678" placeholder="0694******"></ion-input>
         </ion-label>
     </ion-item>
 </ion-content>
 <ion-footer class="ion-no-border">
-    <ion-button expand="full">Update Information</ion-button>
+    <ion-button expand="full">Mettre à jour les informations</ion-button>
 </ion-footer>
