--- a/src/app/filter/filter.page.html
+++ b/src/app/filter/filter.page.html
@@ -1,95 +1,97 @@
 <ion-header class="ion-no-border">
-    <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-back-button defaultHref="" text="" mode="md" (click)="closeModal()">
-                <img src="../../assets/images/back.svg">
-            </ion-back-button>
-        </ion-buttons>
-        <ion-title mode="ios">Filter</ion-title>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="" text="" mode="md" (click)="closeModal()">
+        <img src="../../assets/images/back.svg">
+      </ion-back-button>
+    </ion-buttons>
+    <ion-title mode="ios">Filtres</ion-title>
+  </ion-toolbar>
 </ion-header>
 <ion-content>
-    <div class="main_head ion-padding-start ion-padding-top">Sort By
-    </div>
-    <ion-row class="ion-padding-top">
-        <ion-col size="6" class="ion-no-padding"> <label class="checkbox-button">
+  <div class="main_head ion-padding-start ion-padding-top">Trier par
+  </div>
+  <ion-row class="ion-padding-top">
+    <ion-col size="6" class="ion-no-padding"> <label class="checkbox-button">
         <input type="checkbox" class="checkbox-button__input" checked>
         <span class="checkbox-button__control"></span>
-        Most Popular
+        Le plus populaire
       </label></ion-col>
-        <ion-col class="ion-no-padding" size="6"> <label class="checkbox-button">
+    <ion-col class="ion-no-padding" size="6"> <label class="checkbox-button">
         <input type="checkbox" class="checkbox-button__input">
         <span class="checkbox-button__control"></span>
-        Price : Low to High
+        Prix croissant
       </label></ion-col>
-    </ion-row>
-    <ion-row>
-        <ion-col class="ion-no-padding" size="6"> <label class="checkbox-button">
+  </ion-row>
+  <ion-row>
+    <ion-col class="ion-no-padding" size="6"> <label class="checkbox-button">
         <input type="checkbox" class="checkbox-button__input">
         <span class="checkbox-button__control"></span>
-        Price : High to Low
+        Prix décroissant
       </label></ion-col>
-    </ion-row>
-    <div class="border_bottom"></div>
-    <div class="main_head ion-padding-start ion-padding-top">Looking For
-    </div>
-    <ion-row class="ion-padding-top">
-        <ion-col size="3" class="ion-no-padding"> <label class="container">Both
+  </ion-row>
+  <div class="border_bottom"></div>
+  <div class="main_head ion-padding-start ion-padding-top">Service pour
+  </div>
+  <ion-row class="ion-padding-top">
+    <ion-col size="3" class="ion-no-padding"> <label class="container">Les deux
         <input type="radio" checked="checked" name="radio">
         <span class="checkmark"></span>
       </label></ion-col>
-        <ion-col size="3" class="ion-no-padding"> <label class="container">Female
+    <ion-col size="3" class="ion-no-padding"> <label class="container">F
         <input type="radio" name="radio">
         <span class="checkmark"></span>
       </label></ion-col>
-        <ion-col size="3" class="ion-no-padding"> <label class="container">Male
+    <ion-col size="3" class="ion-no-padding"> <label class="container">M
         <input type="radio" name="radio">
         <span class="checkmark"></span>
       </label></ion-col>
-    </ion-row>
-    <div class="border_bottom"></div>
-    <div class="main_head ion-padding-start ion-padding-top ion-padding-bottom">Service
-    </div>
-    <ion-row class="ion-padding-bottom">
-        <ion-button mode="md" fill="outline">Hair Cutting
-        </ion-button>
-        <ion-button mode="md" fill="outline">Color Services
-        </ion-button>
-        <ion-button fill="outline" mode="md">Facials
-        </ion-button>
-        <ion-button fill="outline" mode="md">Hair Treatments
-        </ion-button>
-        <ion-button fill="outline" mode="md">Massage
-        </ion-button>
-        <ion-button fill="outline" mode="md">Threading
-        </ion-button>
-    </ion-row>
-    <div class="border_bottom"></div>
-    <div class="main_head ion-padding-start ion-padding-top ion-padding-bottom">Rating<span class="ion-float-right ion-margin-end">
-      (3.0 & Above)</span>
-    </div>
-    <div class="bottom --flex-row-j!sb">
-        <h3 class="rate_h">
-            <ion-icon name="star" [ngClass]="rate >= 1 ? 'yellow-star' :'gray-star'" (click)="setRate(1)">
-            </ion-icon>
-            <ion-icon name="star" [ngClass]="rate >= 2 ? 'yellow-star' :'gray-star'" (click)="setRate(2)">
-            </ion-icon>
-            <ion-icon name="star" [ngClass]="rate >= 3 ? 'yellow-star' :'gray-star'" (click)="setRate(3)">
-            </ion-icon>
-            <ion-icon name="star" [ngClass]="rate >= 4 ? 'yellow-star' :'gray-star'" (click)="setRate(4)">
-            </ion-icon>
-            <ion-icon name="star" [ngClass]="rate >= 5 ? 'yellow-star' :'gray-star'" (click)="setRate(5)">
-            </ion-icon>
-        </h3>
-    </div>
-    <div class="border_bottom"></div>
-    <div class="main_head ion-padding-start ion-padding-top ion-padding-bottom">Set Your Budget<span class="ion-float-right ion-margin-end">
-      $30 - $150</span>
-    </div>
-    <ion-range id="dual-range" dual-knobs>
-    </ion-range>
+  </ion-row>
+  <div class="border_bottom"></div>
+  <div class="main_head ion-padding-start ion-padding-top ion-padding-bottom">Services
+  </div>
+  <ion-row class="ion-padding-bottom">
+    <ion-button mode="md" fill="outline">Coupe de cheveux
+    </ion-button>
+    <ion-button mode="md" fill="outline">Services couleur
+    </ion-button>
+    <ion-button fill="outline" mode="md">Soins du visage
+    </ion-button>
+    <ion-button fill="outline" mode="md">Traitements capillaires
+    </ion-button>
+    <ion-button fill="outline" mode="md">Massage
+    </ion-button>
+    <ion-button fill="outline" mode="md">Threading
+    </ion-button>
+  </ion-row>
+  <div class="border_bottom"></div>
+  <div class="main_head ion-padding-start ion-padding-top ion-padding-bottom">Avis<span
+      class="ion-float-right ion-margin-end">
+      (3.0 et plus)</span>
+  </div>
+  <div class="bottom --flex-row-j!sb">
+    <h3 class="rate_h">
+      <ion-icon name="star" [ngClass]="rate >= 1 ? 'yellow-star' :'gray-star'" (click)="setRate(1)">
+      </ion-icon>
+      <ion-icon name="star" [ngClass]="rate >= 2 ? 'yellow-star' :'gray-star'" (click)="setRate(2)">
+      </ion-icon>
+      <ion-icon name="star" [ngClass]="rate >= 3 ? 'yellow-star' :'gray-star'" (click)="setRate(3)">
+      </ion-icon>
+      <ion-icon name="star" [ngClass]="rate >= 4 ? 'yellow-star' :'gray-star'" (click)="setRate(4)">
+      </ion-icon>
+      <ion-icon name="star" [ngClass]="rate >= 5 ? 'yellow-star' :'gray-star'" (click)="setRate(5)">
+      </ion-icon>
+    </h3>
+  </div>
+  <div class="border_bottom"></div>
+  <div class="main_head ion-padding-start ion-padding-top ion-padding-bottom">Votre budget<span
+      class="ion-float-right ion-margin-end">
+      10 - 350€</span>
+  </div>
+  <ion-range id="dual-range" dual-knobs>
+  </ion-range>
 </ion-content>
 <ion-footer class="ion-no-border">
-    <ion-button mode="md" class="apply" (click)="closeModal()">Cancel</ion-button>
-    <ion-button mode="md" class="apply" (click)="closeModal()">Apply</ion-button>
+  <ion-button mode="md" class="apply" (click)="closeModal()">Annueler</ion-button>
+  <ion-button mode="md" class="apply" (click)="closeModal()">Valider</ion-button>
 </ion-footer>
