--- a/src/app/search-layout/search-layout.page.html
+++ b/src/app/search-layout/search-layout.page.html
@@ -15,10 +15,10 @@
     <div class="main_head ion-padding-start">Résultats de recherche (53)<span class="ion-float-right ion-margin-end">
             <img (click)="filter()" src="../../assets/images/filter.svg" height="18px" width="18px"></span>
     </div>
-    <ion-item lines="none" *ngFor="let item of searchSalon">
+    <ion-item lines="none" *ngFor="let item of searchSalon"> 
         <img slot="start" class="salon_img" src="{{ item?.img }}">
         <ion-label>
-            <p class="salon_name">{{ item?.name }}</p>
+            <a class="salon_name" (click)="salonProfile(item)" >{{ item?.name }}</a>
             <p class="address">{{ item?.address }}</p>
 
             <div class="rate_div">
