--- a/src/app/appointment/appointment.page.html
+++ b/src/app/appointment/appointment.page.html
@@ -19,11 +19,11 @@
             <div class="salon-container" *ngFor="let item of upcoming">
                 <ion-item lines="none" class="ion-no-padding" (click)="detail()">
                     <ion-thumbnail>
-                        <img src="{{ item?.img }}" height="80px" width="80px">
+                        <img src="http://157.230.232.108{{ item.salon?.Logo?.url }}" height="80px" width="80px">
                     </ion-thumbnail>
                     <ion-label>
-                        <p class="salon_name">{{ item?.name }}</p>
-                        <p class="address">{{ item?.address }}</p>
+                        <p class="salon_name">{{ item.salon?.name }}</p>
+                        <p class="address">{{ item.salon?.address }}</p>
                         <div class="rate_div">
                             <div class="bottom --flex-row-j!sb">
                                 <h3 class="rate_h">
@@ -40,7 +40,7 @@
                     </ion-label>
                 </ion-item>
                 <hr>
-                <p class="date">{{ item?.date }}<span class="get_direction ion-float-right" (click)="direction()">Voir
+                <p class="date">{{ item?.appointment_date  | date:'dd-MM-yyyy HH:mm' }}<span class="get_direction ion-float-right" (click)="direction()">Voir
                         sur la carte</span>
                 </p>
             </div>
@@ -49,11 +49,11 @@
             <div class="salon-container" *ngFor="let item of past">
                 <ion-item lines="none" class="ion-no-padding" (click)="detail()">
                     <ion-thumbnail>
-                        <img src="{{ item?.img }}" height="80px" width="80px">
+                        <img src="http://157.230.232.108{{ item.salon?.Logo?.url }}" height="80px" width="80px">
                     </ion-thumbnail>
                     <ion-label>
-                        <p class="salon_name">{{ item?.name }}</p>
-                        <p class="address">{{ item?.address }}</p>
+                        <p class="salon_name">{{ item.salon?.name }}</p>
+                        <p class="address">{{ item.salon?.address }}</p>
                         <div class="rate_div">
                             <div class="bottom --flex-row-j!sb">
                                 <h3 class="rate_h">
@@ -70,7 +70,7 @@
                     </ion-label>
                 </ion-item>
                 <hr>
-                <p class="date">{{ item?.date }}<span class="ion-float-right" (click)="rating()">Donnez une note</span>
+                <p class="date">{{ item?.appointment_hours }}<span class="ion-float-right" (click)="rating()">Donnez une note</span>
                 </p>
             </div>
         </div>
