--- a/src/app/select-employee/select-employee.page.html
+++ b/src/app/select-employee/select-employee.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="date-time" text="" mode="md">
+            <ion-back-button defaultHref="salon-profile" text="" mode="md">
                 <img src="../../assets/images/back.svg">
             </ion-back-button>
         </ion-buttons>
@@ -9,20 +9,14 @@
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <ion-item lines="none" *ngFor="let emp of employee">
+    <ion-item lines="none"  *ngFor="let emp of employee" (click)="employ(emp)">
         <img slot="start" class="emp_img" src="../../assets/images/profile.png">
-        <ion-label>Elizabeth</ion-label>
+        <ion-label>{{emp.fullname}}</ion-label>
 
-        <img src="../../assets/images/checkback.svg" slot="end">
-    </ion-item>
-    <ion-item lines="none" *ngFor="let emp of employee">
-        <img slot="start" class="emp_img" src="../../assets/images/profile.png">
-        <ion-label>Elizabeth</ion-label>
-
-        <img src="../../assets/images/checkback.svg" slot="end">
+        <img [src]="'../../assets/images/checkback.svg'" slot="end">
     </ion-item>
 
 </ion-content>
 <ion-footer class="ion-no-border">
-    <ion-button expand="full" (click)="payment()">Select Payment Method</ion-button>
+    <ion-button expand="full" (click)="schedule()">Select schedule</ion-button>
 </ion-footer>
