--- a/src/app/salon-profile/salon-profile.page.scss
+++ b/src/app/salon-profile/salon-profile.page.scss
@@ -217,4 +217,8 @@ ion-footer {
             margin-left: 14px;
         }
     }
+    
 }
+.yellow-star {
+            color: var(--fill-yellow);
+        }
