--- a/src/app/select-employee/select-employee.page.scss
+++ b/src/app/select-employee/select-employee.page.scss
@@ -55,4 +55,10 @@ ion-footer {
         margin: 0;
         font-family: var(--regular-font);
     }
+    .emp{
+        background: #eeeeee;
+    }
+    .select_emp{
+        background-color: crimson !important;
+    }
 }
