--- a/src/app/select-employee/select-employee.page.html
+++ b/src/app/select-employee/select-employee.page.html
@@ -5,18 +5,20 @@
                 <img src="../../assets/images/back.svg">
             </ion-back-button>
         </ion-buttons>
-        <ion-title mode="ios">Select Employee</ion-title>
+        <ion-title mode="ios">Sélectionnez un employé</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <ion-item lines="none"  *ngFor="let emp of employee" (click)="employ(emp)">
+    <ion-item lines="none" *ngFor="let emp of employee" (click)="employ(emp)"
+        [ngClass]="selectEmp==emp ? 'select_emp' :'emp'">
         <img slot="start" class="emp_img" src="../../assets/images/profile.png">
         <ion-label>{{emp.fullname}}</ion-label>
 
-        <img [src]="'../../assets/images/checkback.svg'" slot="end">
+        <img *ngIf="selectEmp!=emp" [src]="'../../assets/images/checkback.svg'" slot="end">
+        <img *ngIf="selectEmp==emp" [src]="'../../assets/images/check.svg'" slot="end">
     </ion-item>
 
 </ion-content>
 <ion-footer class="ion-no-border">
-    <ion-button expand="full" (click)="schedule()">Select schedule</ion-button>
+    <ion-button expand="full" (click)="schedule()">Sélectionnez un horaire</ion-button>
 </ion-footer>
