--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,52 +15,9 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <div class="main_head ion-padding-start">Explorer les services</div>
-  <ion-row class="ion-padding-start ion-padding-top">
-    <div class="scroll">
-      <ion-col size="4" *ngFor="let service of services" (click)="listeSalons(service)">
-        <img class="my_img" src="http://157.230.232.108{{ service?.image?.url }}" width="98px" height="126px" />
-        <p class="name">{{ service?.name }}</p>
-      </ion-col>
-    </div>
-  </ion-row>
-  <div class="main_head ion-padding-start ion-padding-top">
-    Salons populaires à proximité
-  </div>
-  <ion-row class="ion-padding-start ion-padding-top">
-    <div class="scroll">
-      <ion-col size="5" *ngFor="let salon of salons" (click)="salonProfile(salon)">
-        <img class="my_img" src="http://157.230.232.108{{ salon?.Logo?.url }}" width="157px" height="125px" />
-        <p class="salon_name ion-padding-top">{{ salon?.name }} {{ salon?.logo?.id }}</p>
-        <div class="address">{{ salon?.address | slice:0:30 }}..</div>
-        <div class="rate_div">
-          <img class="star_img" src="../../assets/images/star.svg" height="22px" width="22px" />
-          {{ salon?.rate }}
-          <img class="circle_icon" src="../../assets/images/circle.svg" height="6px" width="6px" />
-          <span class="ion-text-right"> {{ salon?.km }}</span>
-        </div>
-      </ion-col>
-    </div>
-  </ion-row>
-  <div class="main_head ion-padding-start ion-padding-top">
-    Top dans votre ville
-  </div>
-  <ion-item lines="none" *ngFor="let item of nearbysalon" (click)="location()">
-    <img slot="start" class="salon_img" src="{{ item?.img }}" />
-    <ion-label>
-      <p class="salon">{{ item?.name }}</p>
-      <p class="address">{{ item?.desc }}</p>
-      <div class="rate_div">
-        <div class="bottom --flex-row-j!sb">
-          <h3 class="rate_h">
-            <ion-icon name="star" [ngClass]="rate >= 1 ? 'yellow-star' :'gray-star'">
-            </ion-icon>
-            <span class="ion-margin-bottom">{{ item?.rate }}</span>
-            <img class="circle_icon" src="../../assets/images/circle.svg" height="6px" width="6px" />
-            <span class="ion-text-right"> {{ item?.km }}</span>
-          </h3>
-        </div>
-      </div>
-    </ion-label>
-  </ion-item>
+  <ion-card *ngFor="let salon of salons" (click)="salonProfile(salon)">
+    <img src="http://157.230.232.108{{ salon?.Logo?.url }}" />
+    <div class="card-title">{{ salon?.name }}</div>
+    <div class="card-subtitle">{{ salon?.km}}</div>
+  </ion-card>
 </ion-content>
